# mikaboshi

./: LICENSE  Makefile  README.md  compose.yml
.github/workflows/: release.yml
agent/: Cargo.toml  Dockerfile  Dockerfile.windows  THIRD_PARTY_LICENSES  build.rs  runtime.Dockerfile
agent/src/: main.rs
docker-compose/mikaboshi-agent/: compose.yml
docker-compose/mikaboshi-server/: compose.yml
proto/: packet.proto
server/: Cargo.toml  Dockerfile  build.rs  runtime.Dockerfile
server/src/: main.rs
web/: build.Dockerfile  package-lock.json  package.json  proto.Dockerfile  vite.config.js
web/src/: App.jsx  TrafficVisualizer.jsx  index.css  webglCheck.js
web/src/proto/: GrpcWebImpl.ts  packet.ts
