[package]
name = "mikaboshi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tonic-web = "0.12"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower = { version = "0.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }


[build-dependencies]
tonic-build = "0.12"
